Require a valid token to access /member route
