# src/MainRouter.js
@@ -4,7 +4,7 @@ const swaggerUi = require('swagger-ui-express')
 const YAML = require('yamljs')
 const Redirection = require('./Redirection')
 
-module.exports = (adapters, controller) => {
+module.exports = (adapters, controller, auth) => {
 
   function nocache(req, res, next) {
     res.header('Cache-Control', 'private, no-cache, no-store, must-revalidate')
@@ -56,11 +56,13 @@ module.exports = (adapters, controller) => {
 
   router.use('/api-ui', swaggerUi.serve, swaggerUi.setup(oas3Document))
   router.get('/', (req, res) => res.redirect('api-ui'))
+
+  router.post('/session', nocache, jsonHandlerFor(req => auth.login(req.body)))
   
   router.post('/contacts', nocache, jsonHandlerFor(req => controller.registerContact(req.body)))
   router.get('/contacts/:id/confirmations/:code', jsonHandlerFor(req => controller.confirmRegistration(req.params.id, req.params.code)))
 
-  router.post('/members', nocache, jsonHandlerFor(req => createMember(req.body)))
+  router.post('/members', nocache, auth.bearerAuth, jsonHandlerFor(req => createMember(req.body)))
 
   return router
 }
