# src/Server.js
@@ -2,11 +2,12 @@ const express = require('express')
 const bodyParser = require('body-parser')
 
 module.exports = (store, models, logger, fetch, config) => {
+  const auth = require('./auth')(fetch, logger)
   const adapters = require('./adapters')(fetch, config)
   const mailSender = require('./MailSender')(logger, config)
   const controller = require('./controller/ContactController')(store, models, adapters.crm, mailSender, config)
 
-  const mainRouter = require('./MainRouter')(adapters, controller)
+  const mainRouter = require('./MainRouter')(adapters, controller, auth)
   const app = express()
 
   if (!config.isProduction) {
